Fix overflow issue on body content

--- a/hra/patternlab/site/sass/molecules/_site-body.scss
+++ b/hra/patternlab/site/sass/molecules/_site-body.scss
@@ -4,6 +4,7 @@
 
 .site-body {
     padding: 80px 40px;
+    overflow: auto;
 
     &__inner {
         float: left;
